# test-kotoba-whisper-v2.0

./: .gitignore  README.md  inference.py  inference_mac.py  inference_pipeline.py  pyproject.toml
