[project]
name = "test-kotoba-whisper-v2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.1",
    "datasets>=3.1.0",
    "editables>=0.5",
    "hatchling>=1.26.3",
    "llvmlite>=0.43.0",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "openai-whisper>=20240930",
    "soundfile>=0.12.1",
    "transformers>=4.46.3",
    "wheel>=0.45.0",
]

[dependency-groups]
torch = [
    "torch==2.5.1+cu124",
    "torchvision==0.20.1+cu124",
]
flash-attn = [
    "flash-attn>=2.7.0.post2",
]

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
